--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsx01",
   "version": "0.1.0",
-  "homepage": "https://subramaneshwar.github.io/jsx1-pages",
+  "homepage": "https://subramaneshwar.github.io/jsx_as1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
